Fixed profile picture overlap with menu

--- a/app/imports/ui/pages/user/public-profile-page.css
+++ b/app/imports/ui/pages/user/public-profile-page.css
@@ -5,7 +5,7 @@
 }
 
 .profile-head-blank {
-  height: 140px;
+  height: 180px;
 }
 
 #profile-header {
